@@ -162,22 +162,6 @@ end_import
 
 begin_import
 import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|fs
-operator|.
-name|s3
-operator|.
-name|S3Credentials
-import|;
-end_import
-
-begin_import
-import|import
 name|com
 operator|.
 name|amazonaws
@@ -1073,22 +1057,94 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 comment|// Try to get our credentials or just connect anonymously
-name|S3Credentials
-name|s3Credentials
+name|String
+name|accessKey
 init|=
-operator|new
-name|S3Credentials
+name|conf
+operator|.
+name|get
+argument_list|(
+name|ACCESS_KEY
+argument_list|,
+literal|null
+argument_list|)
+decl_stmt|;
+name|String
+name|secretKey
+init|=
+name|conf
+operator|.
+name|get
+argument_list|(
+name|SECRET_KEY
+argument_list|,
+literal|null
+argument_list|)
+decl_stmt|;
+name|String
+name|userInfo
+init|=
+name|name
+operator|.
+name|getUserInfo
 argument_list|()
 decl_stmt|;
-name|s3Credentials
+if|if
+condition|(
+name|userInfo
+operator|!=
+literal|null
+condition|)
+block|{
+name|int
+name|index
+init|=
+name|userInfo
 operator|.
-name|initialize
+name|indexOf
 argument_list|(
-name|name
+literal|':'
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|index
+operator|!=
+operator|-
+literal|1
+condition|)
+block|{
+name|accessKey
+operator|=
+name|userInfo
+operator|.
+name|substring
+argument_list|(
+literal|0
 argument_list|,
-name|conf
+name|index
 argument_list|)
 expr_stmt|;
+name|secretKey
+operator|=
+name|userInfo
+operator|.
+name|substring
+argument_list|(
+name|index
+operator|+
+literal|1
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|accessKey
+operator|=
+name|userInfo
+expr_stmt|;
+block|}
+block|}
 name|AWSCredentialsProviderChain
 name|credentials
 init|=
@@ -1098,15 +1154,9 @@ argument_list|(
 operator|new
 name|BasicAWSCredentialsProvider
 argument_list|(
-name|s3Credentials
-operator|.
-name|getAccessKey
-argument_list|()
+name|accessKey
 argument_list|,
-name|s3Credentials
-operator|.
-name|getSecretAccessKey
-argument_list|()
+name|secretKey
 argument_list|)
 argument_list|,
 operator|new
